# text-dungeon

./: .dockerignore  .gitignore  2D-GRAPHICS-PLAN.md  ARCHITECTURE.md  Dockerfile  FIRST-PERSON-PLAN.md  MULTIPLAYER-DESIGN.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
scripts/: check.sh  lan-url.sh  play.sh
src/text_dungeon/: __main__.py  balance.py  character.py  combat.py  commands.py  directions.py  game.py  history.py  inventory.py  items.py  leveling.py  minimap.py  models.py  persistence.py  skills.py  world.py  world_state.py
src/text_dungeon/models/: __init__.py  item.py  monster.py  player.py  room.py
src/text_dungeon/templates/: __init__.py  bosses.py  classes.py  items.py  monsters.py  rooms.py  skills.py  worlds.py
src/text_dungeon/web/: server.py
src/text_dungeon/web/static/: app.js  index.html  style.css
src/text_dungeon/web/static/tiles/: CREDITS.txt
tests/: test_character.py  test_combat.py  test_game.py  test_inventory.py  test_leveling.py  test_minimap.py  test_persistence.py  test_server.py  test_skills.py  test_world.py  test_world_state.py
