[project]
name = "text-dungeon"
version = "0.1.0"
description = "A text-based dungeon crawler"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
text-dungeon = "text_dungeon.__main__:main"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_dungeon"]
