[project]
name = "text-dungeon"
version = "0.1.0"
description = "A text-based dungeon crawler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
text-dungeon = "text_dungeon.__main__:main"
text-dungeon-web = "text_dungeon.web.server:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_dungeon"]

[tool.ruff]
line-length = 105
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["src/text_dungeon"]
